--- a/include/wifisonifi.tex
+++ b/include/wifisonifi.tex
@@ -7,7 +7,9 @@
 \pagestyle{empty}
 
 \tikzstyle{block} = [rectangle, draw, 
-    text width=7em, text centered, minimum height=2.5em, node distance=3cm]
+    text width=7em, text centered, minimum height=2.5em, node distance=3cm,
+	top color=white, % a shading that is white at the top...
+	    bottom color=black!10] % and something else at the bottom]
 \tikzstyle{line} = [draw, -triangle 90]
 
 
